--- a/app/src/main/res/layout/layout_permission_child_item.xml
+++ b/app/src/main/res/layout/layout_permission_child_item.xml
@@ -49,12 +49,15 @@
       />
   </LinearLayout>
 
-  <android.support.v7.widget.SwitchCompat
+  <android.support.v7.widget.AppCompatSpinner
     android:id="@+id/switch_compat"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentRight="true"
     android:layout_centerVertical="true"
-    android:layout_marginRight="4dp"/>
+    android:layout_marginRight="4dp"
+    android:spinnerMode="dialog"
+    android:entries="@array/op_modes"
+  />
 
 </RelativeLayout>
