--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -54,7 +54,7 @@
     <item>禁止</item>
     <item>默认</item>
     <item>询问</item>
-    <item>未知</item>
+    <item>空白</item>
   </string-array>
 
 </resources>
