--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -53,8 +53,8 @@
     <item>忽略</item>
     <item>禁止</item>
     <item>默认</item>
+    <item>前台</item>
     <item>询问</item>
-    <item>空白</item>
   </string-array>
 
 </resources>
